# portal

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  backlog.md  install.sh  pyproject.toml
app/: backlog.py  config.py  database.py  ledger.py  main.py  ports.py  share_render.py  supervisor.py
app/routes/: api.py  pages.py
app/static/: app.js  style.css  tokens.css  utils.js
app/static/theme/: builder.css  builder.js  color.js
app/templates/: docs.html  index.html  tema.html
cli/: svc
deploy/: portal.service
tests/: test_service_api.py  test_service_cleanup.py  test_status.py  test_supervisor.py  test_svc_install.py
