[project]
name = "portal"
version = "0.1.0"
description = "Tjänsteportal för delad dev-VM: tjänsteregister, portverktyg och dokumentation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "markdown>=3.6",
    "nh3>=0.3.6",
    "pygments>=2.20.0",
]
